Updating OptionListScreen to use new layout system.